--- a/Bucatarie.html
+++ b/Bucatarie.html
@@ -77,9 +77,9 @@
 						<div class="col-md-10 col-md-offset-1">
 							<a href="index.html" id="main-logo"></a>
 							<div class="animate-box">
-								<h2></h2>
+								<h2>Stiinta, arta si comuniune</h2>
 
-									 <p><a class="btn btn-primary btn-lg" href="blogbucatarie.html">Vezi Articole de Bucatarie</a></p> 
+								<!--	 <p><a class="btn btn-primary btn-lg" href="blogbucatarie.html">Vezi Articole de Bucatarie</a></p> -->
 							</div>
 						</div>
 					</div>
@@ -183,7 +183,7 @@
 						<ul id="fh5co-portfolio-list">
 
 							<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/tort_cioco.jpg); ">
-								<a href="postari/1post-tort-ciocolata.html" class="color-3">
+								<a href="1post-tort-ciocolata.html" class="color-3">
 									<div class="case-studies-summary">
 										<span>Retete</span>
 										<h2>Tort de Ciocolata</h2>
