--- a/Gradina.html
+++ b/Gradina.html
@@ -77,9 +77,9 @@
 						<div class="col-md-10 col-md-offset-1">
 							<a href="index.html" id="main-logo"></a>
 							<div class="animate-box">
-								<h2></h2>
+								<h2>Gradina - poezia naturii</h2>
 
-								 <p><a class="btn btn-primary btn-lg" href="bloggradina.html">Vezi Articole de Gradinarit</a></p> 
+								<!-- <p><a class="btn btn-primary btn-lg" href="bloggradina.html">Vezi Articole de Gradinarit</a></p> -->
 
 							</div>
 						</div>
