--- a/Pentru-tine.html
+++ b/Pentru-tine.html
@@ -77,9 +77,9 @@
 						<div class="col-md-10 col-md-offset-1">
 							<a href="index.html" id="main-logo"></a>
 							<div class="animate-box">
-								<h2></h2>
+								<h2>Experienta si intelepciune</h2>
 
-	 						<p><a class="btn btn-primary btn-lg" href="blogpentrutine.html">Vezi Articole Pentru Tine</a></p> 
+	 					<!--	<p><a class="btn btn-primary btn-lg" href="blogpentrutine.html">Vezi Articole Pentru Tine</a></p>  -->
 
 							</div>
 						</div>
@@ -127,7 +127,7 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
 						<h3>Lifestyle</h3>
-						<p>-tu esti cel mai important!</p>
+						<p>-daca nu ai apucat sa te cultivi, te cultivam noi!</p>
 					</div>
 				</div>
 
@@ -141,19 +141,19 @@
 					<div class="col-md-4">
 						<div class="feature-text">
 							<h3>DIY</h3>
-							<p>Invatati sa mentineti un stil de viata sanatos, incepand cu activitatea voastra preferata: mancatul. Recomandat pentru stundenti!</p>
+							<p>Nu ai bani de o masina? Te ajutam noi sa iti construiesti una doar din tuburi de carton!</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="feature-text">
-							<h3>Igiena</h3>
-							<p>Fie ca esti la cantina, impreuna cu prietenii in oras sau acasa la parintii prietenei tale, este important sa lasi o impresie buna. Dar cum?</p>
+							<h3>Cultura</h3>
+							<p>Cele mai bune carti si filme pe care trebuie sa le stii ca sa faci o impresie buna cu vastele tale cunostinte.</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="feature-text">
 							<h3>Timp liber</h3>
-							<p>Stii si tu cum e atunci cand ti se ard clatitele in tigaie iar tigaia se innegreste? Nu dispera, te invatam sa ai grija de echipamentele de bucatarie!</p>
+							<p>Muzica, arta si plimbari prin parc. Idei de intalniri romantice si de cadouri, cafea si emisiuni de radio.</p>
 						</div>
 					</div>
 				</div>
