--- a/Sport.html
+++ b/Sport.html
@@ -77,9 +77,9 @@
 						<div class="col-md-10 col-md-offset-1">
 							<a href="index.html" id="main-logo"></a>
 							<div class="animate-box">
-								<h2></h2>
+								<h2>Recapata-ti vitalitatea!</h2>
 
-								 <p><a class="btn btn-primary btn-lg" href="blogsport.html">Vezi Articole Sportive</a></p> 
+								<!--  <p><a class="btn btn-primary btn-lg" href="blogsport.html"></a></p> -->
 							</div>
 						</div>
 					</div>
@@ -186,7 +186,7 @@
 						<ul id="fh5co-portfolio-list">
 
 							<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/depresie.jpeg); ">
-								<a href="#" class="color-3">
+								<a href="4post-lupta-impotriva-depresiei.html" class="color-3">
 									<div class="case-studies-summary">
 										<span>Sanatate</span>
 										<h2>Lupta impotriva depresiei</h2>
@@ -194,11 +194,11 @@
 								</a>
 							</li>
 
-							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image:  url(images/blog-1.jpg);">
-								<a href="#" class="color-4">
+							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image:  url(images/pilates.jpg);">
+								<a href="5post-pilates.html" class="color-4">
 									<div class="case-studies-summary">
-										<span>Amenajari</span>
-										<h2>Bucatarie cu stil</h2>
+										<span>Miscare</span>
+										<h2>Sportul la tine acasa</h2>
 									</div>
 								</a>
 							</li>
