--- a/Casa-ta.html
+++ b/Casa-ta.html
@@ -77,9 +77,9 @@
 						<div class="col-md-10 col-md-offset-1">
 							<a href="index.html" id="main-logo"></a>
 							<div class="animate-box">
-								<h2></h2>
+								<h2>Zambeste, esti acasa!</h2>
 
-								 <p><a class="btn btn-primary btn-lg" href="blogcasata.html">Vezi Articole pentru casa ta</a></p>
+							<!--	 <p><a class="btn btn-primary btn-lg" href="blogcasata.html">Vezi Articole pentru casa ta</a></p> -->
 
 							</div>
 						</div>
