inca un articol

--- a/5post-pilates.html
+++ b/5post-pilates.html
@@ -166,31 +166,44 @@
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2 text-center heading-section">
 
-				<p>Sportul are extrem de multe beneficii, atat pentru fizicul cat si pentru psihicul tau.</p>
+				<p>Nu ai nevoie de un abonament la sala pentru a fi in forma. Niste muzica si o camera aerisita sunt de ajuns!</p>
 			</div>
 		</div>
 
 		<div class="row row-bottom-padded-md">
 			<div class="col-md-12 text-center animate-box">
-				<p><img src="images/depresiesport.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive img-rounded"></p>
+				<p><img src="images/pilates3.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive img-rounded"></p>
 			</div>
 
 		</div>
 		<div class="row">
 			<div class="col-md-12">
 				<div class="feature-text">
-					<h2><b>Exercitiile fizice</b></h2>
-					<p>Studiile arata ca sportul aduce un mare beneficiu persoanelor care se confrunta cu anxietatea si depresia, imbunatatindu-le starea de spirit.
-					Miscarea fizica efectuata cu regularitate are caapcitatea de a reduce cu pana la 25% riscul de a suferi de stari depresive si
-					anxietate, imbunatatind functiile mentale si capacitatea de concentrare. Gandeste-te ca, in timpul antrenamentului, substantele care sunt eliberate
-					 in creier te ajuta sa gestionezi starile de stres, diminuand astfel riscul de anxietate si depresie. </p>
+					<h2><b></b></h2>
+					<p></p>
 
-					 <h2><b>Ce sporturi sunt benefice?</b></h2>
-					 <p>Ciclismul &nbsp &nbsp &nbsp - te face sa uiti de problemele tale, fiind nevoit sa te concentrezi la drumul pe care il strabati;</p>
-					 <p>Dansul &nbsp &nbsp &nbsp &nbsp &nbsp-reusind sa imbine arta si sportul, dansul ne ofera o alta perspectiva asupra vietii, aceea de creatori de frumos;</p>
-					 <p>Inotul &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp -la contactul cu apa, corpul uman se descarca electric, fenomen care reduce starile de stres;</p>
-					 <p>Alergatul &nbsp &nbsp &nbsp -miscarea repetitiva a picioarelor confera siguranta alergatorului, fiind un mijloc foarte bun de relaxare;</p>
-					 <p>Plimbarile &nbsp &nbsp &nbsp -iesitul in aer liber revigoreaza intreg organismul, fiind si un mijloc de a-ti revedea prietenii si de a face miscare impreuna.</p>
+					 <h2><b>Ce variante am?</b></h2>
+					 <p>Practica Zumba! </p>
+           <p> &nbsp &nbsp &nbsp -este un program de fitness inspirat din dansurile latino,  implicand o combinație între elemente ce țin de dans și elemente din sfera aerobicului.
+             Este un sport ce se poate practica atat la sala, cat si acasa. Echipamentul consta in haine de fitness, ce permit aerului sa circule si impiedica transpiratia, adidasi
+             si o boxa, la care se pune muzica. Pentru un antrenament cat mai corect, puteti porni si urmari videoclipuri de Zumba, realizand miscarile impreuna cu antrenorul.</p>
+
+          <p>Pilates</p>
+            <p> &nbsp &nbsp &nbsp -este un sport ce necesita controlul musculaturii abdominale si simtul echilibrului, coordonate permanent cu respiratia. Exercitiile par simple,
+              insa muschii lucreaza intens si este foarte dificil sa antrenezi simultan mai multe grupe musculare. Acest sport are foarte multe beneficii, precum:
+              <ul>
+                <li>mareste rezistenta fizica la efort si capacitatea pulmonara;</li>
+                <li>intareste musculatura, fara a o dezvolta exagerat;</li>
+                <li>creeaza un corp alungit, tonifiat, cu coapse suple si abdomen plat;</li>
+              </ul></p>
+
+              <p>Alte exercitii simple </p>
+              <p> &nbsp &nbsp &nbsp -desi clasice, flotarile, abdomenele si genuflexiunile, atunci cand sunt facute regulat si exersate de un numar din ce in ce mai mare de ori,
+                produc aceleasi efecte ca practicarea unui sport de performanta. Desi dureaza mai mult sa obtii rezultatele dorite si poate fi un exercitiu de vointa sa faci aceleasi
+               exercitii in fiecare zi, sunt o alternativa foarte buna, atunci cand nu ai bani pentru un antrenor personal sau un abonament la sala.</p>
+
+               <p>Nu uita: sportul poate fi facut oriunde, atat cu bani, cat si fara. Spor la treaba!</p>
+
 
 				</div>
 		</div>
