--- a/4post-lupta-impotriva-depresiei.html
+++ b/4post-lupta-impotriva-depresiei.html
@@ -166,7 +166,7 @@
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2 text-center heading-section">
 
-				<p>Sportul are extrem de multe beneficii, atat pentru fizicul cat si pentru psihicul tau.</p>
+				<p>Activitatile fizice ofera foarte multe beneficii sanatatii si starii tale de spirit. Traieste mai mult, traieste mai bine!</p>
 			</div>
 		</div>
 
