--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 					<div class="col-md-4">
 						<div class="feature-text">
 							<h3>Pentru tine</h3>
-							<p>Nu esti singurul care da un search rapid pe googel de tipul "Cele mai bune filme de dragoste 2018". Nu stii cum sa iti consumi timpul intr-un mod util? Noi iti impartasim cu drag idei si iti oferim sfaturi utile pentru dezvoltarea ta. Poti gasi review-uri la carti, filme si multe alte postari pentru tine!</p>
+							<p>Nu esti singurul care da un search rapid pe google de tipul "Cele mai bune filme de dragoste 2018". Nu stii cum sa iti consumi timpul intr-un mod util? Noi iti impartasim cu drag idei si iti oferim sfaturi utile pentru dezvoltarea ta. Poti gasi review-uri la carti, filme si multe alte postari pentru tine!</p>
 						</div>
 					</div>
 				</div>
@@ -165,8 +165,8 @@
 <div class="row">
 	<div class="col-md-12 text-center">
 				<video width="900" height="500" controls>
-  <source src="banica.mp4" type="video/mp4">
-  <source src="banica.ogg" type="video/ogg">
+  <source src="images/vedei.mp4" type="video/mp4">
+  <source src="images/vedei.ogg" type="video/ogg">
 Your browser does not support the video tag.
 </video>
 </div>
