--- a/2post-beneficiile-alergarii0.html
+++ b/2post-beneficiile-alergarii0.html
@@ -71,7 +71,9 @@
 
 		<div class="fh5co-hero">
 			<div class="fh5co-overlay"></div>
+
 			<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/depresie.jpeg);">
+
 				<div class="desc animate-box">
 					<div class="container">
 						<div class="col-md-10 col-md-offset-1">
@@ -125,57 +127,58 @@
 
 
 
+
 <div id="fh5co-feature-product" > <!--class="fh5co-section-gray">-->
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2 text-center heading-section">
-
+			<!--	<h3>Beneficiile Alergarii</h3>  -->
 				<p>Activitatile fizice ofera foarte multe beneficii sanatatii si starii tale de spirit. Traieste mai mult, traieste mai bine!</p>
+
 			</div>
 		</div>
 
 		<div class="row row-bottom-padded-md">
 			<div class="col-md-12 text-center animate-box">
-				<p><img src="images/depresiesport.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive img-rounded"></p>
+				<p><img src="images/runn1.png" alt="Free HTML5 Bootstrap Template" class="img-responsive img-rounded"></p>
 			</div>
 
 		</div>
+
 		<div class="row">
-			<div class="col-md-12">
+
 				<div class="feature-text">
-					<h2><b>Exercitiile fizice</b></h2>
-					<p>Studiile arata ca sportul aduce un mare beneficiu persoanelor care se confrunta cu anxietatea si depresia, imbunatatindu-le starea de spirit.
-					Miscarea fizica efectuata cu regularitate are caapcitatea de a reduce cu pana la 25% riscul de a suferi de stari depresive si
-					anxietate, imbunatatind functiile mentale si capacitatea de concentrare. Gandeste-te ca, in timpul antrenamentului, substantele care sunt eliberate
-					 in creier te ajuta sa gestionezi starile de stres, diminuand astfel riscul de anxietate si depresie. </p>
 
-					 <h2><b>Ce sporturi sunt benefice?</b></h2>
-					 <p>Ciclismul &nbsp &nbsp &nbsp - te face sa uiti de problemele tale, fiind nevoit sa te concentrezi la drumul pe care il strabati;</p>
-					 <p>Dansul &nbsp &nbsp &nbsp &nbsp &nbsp-reusind sa imbine arta si sportul, dansul ne ofera o alta perspectiva asupra vietii, aceea de creatori de frumos;</p>
-					 <p>Inotul &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp -la contactul cu apa, corpul uman se descarca electric, fenomen care reduce starile de stres;</p>
-					 <p>Alergatul &nbsp &nbsp &nbsp -miscarea repetitiva a picioarelor confera siguranta alergatorului, fiind un mijloc foarte bun de relaxare;</p>
-					 <p>Plimbarile &nbsp &nbsp &nbsp -iesitul in aer liber revigoreaza intreg organismul, fiind si un mijloc de a-ti revedea prietenii si de a face miscare impreuna.</p>
-
-				</div>
-		</div>
-			<!--<div class="col-md-4"> -->
-		<!--		<div class="feature-text">
-					<h3>Preparare</h3>
-					<p>Preîncalziți cuptorul la 180 de grade Celsius.</p>
-					<p>For the cake, place all of the cake ingredients, except the boiling water, into a large mixing bowl. Using a wooden spoon, or electric whisk, beat the mixture until smooth and well combined. </p>
-					<p>Add the boiling water to the mixture, a little at a time, until smooth. (The cake mixture will now be very liquid.) </p>
-					<p>Lorem ipsum dolor sit amet, consectetuer adispiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna </p>
-					<p> aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exercitation ullamcorper suscipit lobortis nisl ut aliquip </p>
-
-				</div>
-			</div> -->
-		<!--	<div class="col-md-4">
-				<div class="feature-text">
-					<h3>Django Python</h3>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+					<p>Activitatile fizice ofera foarte multe beneficii sanatatii si starii tale de spirit. Traieste mai mult, traieste mai bine!</p>
 				</div>
 			</div>
-		</div> -->
+
+			<div class="row row-bottom-padded-md">
+				<div class="col-md-12 text-center animate-box">
+					<p><img src="images/depresiesport.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive img-rounded"></p>
+				</div>
+
+			</div>
+			<div class="row">
+				<div class="col-md-12">
+					<div class="feature-text">
+						<h2><b>Exercitiile fizice</b></h2>
+						<p>Studiile arata ca sportul aduce un mare beneficiu persoanelor care se confrunta cu anxietatea si depresia, imbunatatindu-le starea de spirit.
+						Miscarea fizica efectuata cu regularitate are caapcitatea de a reduce cu pana la 25% riscul de a suferi de stari depresive si
+						anxietate, imbunatatind functiile mentale si capacitatea de concentrare. Gandeste-te ca, in timpul antrenamentului, substantele care sunt eliberate
+						 in creier te ajuta sa gestionezi starile de stres, diminuand astfel riscul de anxietate si depresie. </p>
+
+						 <h2><b>Ce sporturi sunt benefice?</b></h2>
+						 <p>Ciclismul &nbsp &nbsp &nbsp - te face sa uiti de problemele tale, fiind nevoit sa te concentrezi la drumul pe care il strabati;</p>
+						 <p>Dansul &nbsp &nbsp &nbsp &nbsp &nbsp-reusind sa imbine arta si sportul, dansul ne ofera o alta perspectiva asupra vietii, aceea de creatori de frumos;</p>
+						 <p>Inotul &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp -la contactul cu apa, corpul uman se descarca electric, fenomen care reduce starile de stres;</p>
+						 <p>Alergatul &nbsp &nbsp &nbsp -miscarea repetitiva a picioarelor confera siguranta alergatorului, fiind un mijloc foarte bun de relaxare;</p>
+						 <p>Plimbarile &nbsp &nbsp &nbsp -iesitul in aer liber revigoreaza intreg organismul, fiind si un mijloc de a-ti revedea prietenii si de a face miscare impreuna.</p>
+
+					</div>
+			</div>
+
+
 
 
 	</div>
@@ -192,14 +195,10 @@
 <h3></h3>
 <h3></h3>
 
-
 				<div id="fh5co-blog-section">
 					<div class="container">
 						<div class="row">
 							<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
-								<h3></h3>
-								<h3></h3>
-								<h1></h1>
 								<h3>Recente</h3>
 								<p>Vezi cele mai recente postari de pe website-ul nostru!</p>
 							</div>
