--- a/6post-propria-ta-gradina.html
+++ b/6post-propria-ta-gradina.html
@@ -142,28 +142,77 @@
 			</div>
 
 		</div>
-		<div class="row">
-			<div class="col-md-12">
-				<div class="feature-text">
-					<h2><b>Exercitiile fizice</b></h2>
-					<p>Studiile arata ca sportul aduce un mare beneficiu persoanelor care se confrunta cu anxietatea si depresia, imbunatatindu-le starea de spirit.
-					Miscarea fizica efectuata cu regularitate are caapcitatea de a reduce cu pana la 25% riscul de a suferi de stari depresive si
-					anxietate, imbunatatind functiile mentale si capacitatea de concentrare. Gandeste-te ca, in timpul antrenamentului, substantele care sunt eliberate
-					 in creier te ajuta sa gestionezi starile de stres, diminuand astfel riscul de anxietate si depresie. </p>
 
-					 <h2><b>Ce sporturi sunt benefice?</b></h2>
-					 <p>Ciclismul &nbsp &nbsp &nbsp - te face sa uiti de problemele tale, fiind nevoit sa te concentrezi la drumul pe care il strabati;</p>
-					 <p>Dansul &nbsp &nbsp &nbsp &nbsp &nbsp-reusind sa imbine arta si sportul, dansul ne ofera o alta perspectiva asupra vietii, aceea de creatori de frumos;</p>
-					 <p>Inotul &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp -la contactul cu apa, corpul uman se descarca electric, fenomen care reduce starile de stres;</p>
-					 <p>Alergatul &nbsp &nbsp &nbsp -miscarea repetitiva a picioarelor confera siguranta alergatorului, fiind un mijloc foarte bun de relaxare;</p>
-					 <p>Plimbarile &nbsp &nbsp &nbsp -iesitul in aer liber revigoreaza intreg organismul, fiind si un mijloc de a-ti revedea prietenii si de a face miscare impreuna.</p>
 
+		<div id="fh5co-services-section">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-8 col-md-offset-2 text-center ">
+						<h3></h3>
+					<!--	<h3>Expertiza</h3>
+						<p>Avem ceea ce cauti!</p> -->
+						<h3>Acestea sunt cele mai bune plante aromatice pentru bucataria ta:</h3>
+					</div>
 				</div>
+			</div>
+			<div class="container">
+				<div class="row text-center">
+					<div class="col-md-4 col-sm-4">
+						<div class="service animate-box">
+							<span><img src="images/busuioc.jpg" class="img-responsive img-rounded"></span>
+							<h3>Busuiocul</h3>
+							<p>Planteaza in ghivece micute seminte de busuioc si asaza vasele intr-o fereastra orientata catre sud.
+								 Busuiocul este o planta foarte iubitoare de soare si caldura.</p>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-4">
+						<div class="service animate-box">
+							<span><img src="images/dafin.jpg" class="img-responsive img-rounded"></span>
+							<h3>Dafinul</h3>
+							<p>Dafinul creste foarte bine in ghivece, pe tot parcursul anului.
+								Aseaza-l la o fereastra orientata catre est sau vest si asigura-te ca locul
+								  in care il pui nu este foarte aglomerat.</p>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-4">
+						<div class="service animate-box">
+							<span><img src="images/asmatui.jpg" class="img-responsive img-rounded"></span>
+							<h3>Asmatuiul</h3>
+							<p>Cultiva niste seminte de asmatui intr-un ghiveci, iar aceastea se vor dezvolta armonios,
+								 in conditii de lumina redusa si temperaturi cuprinse intre 18 si 21 de grade. </p>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-4">
+						<div class="service animate-box">
+							<span><img src="images/arpagic.jpg" class="img-responsive img-rounded"></span>
+							<h3>Arpagic</h3>
+							<p>Ia un manunchi de arpagic din gradina ta si planteaza-l intr-un ghiveci la sfarsitul perioadei
+								sale de vegetatie. Lasa vasul afara pana pana cand frunzele sale se usuca apoi muta-l iarna intr-un
+								vas mai mare si asaza-l intr-un loc racoros, precum pivnita. Dupa cateva zile, poti sa il asezi la fereastra.</p>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-4">
+						<div class="service animate-box">
+							<span><img src="images/patrunjel.jpg" class="img-responsive img-rounded"></span>
+							<h3>Patrunjelul</h3>
+							<p>Poti replanta patrunjelul pentru gradina ta din interior fie folosind seminte, fie dezgropand
+								un manunchi chiar din gradina de afara. Acesta are nevoie de foarte mult soare. El va creste lent,
+								 de aceea trebuie asezat intr-o fereastra orientata catre vest-est. </p>
+						</div>
+
+					</div>
+					<div class="col-md-4 col-sm-4">
+						<div class="service animate-box">
+							<span><img src="images/oregano.jpg" class="img-responsive img-rounded"></span>
+							<h3>Oregano</h3>
+							<p>Daca vrei sa plantezi oregano in gradina de plante aromatice din bucataria ta, nu trebuie decat
+								 sa tai cateva fire din el si sa le plantezi intr-un ghiveci. Vasul trebuie asezat insa intr-o fereastra luminoasa.</p>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 
-
-
-	</div>
 </div>
 
 
