--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@ Your browser does not support the video tag.
 					<div class="service animate-box">
 						<span><i class="icon-beaker"></i></span>
 						<h3>Bucatarie</h3>
-						<p>De la cele mai bune retete si idei de plating, la sfaturi si trucuri utile in bucataria ta!</p>
+						<p>Nu ai inspiratie? Gasesti de la cele mai bune retete si idei de plating, la sfaturi si trucuri utile in bucataria ta! </p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4">
