--- a/Gradina.html
+++ b/Gradina.html
@@ -182,11 +182,11 @@
 					<div class="col-md-12">
 						<ul id="fh5co-portfolio-list">
 
-							<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/cover_bg_2.jpg); ">
-								<a href="#" class="color-3">
+							<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/grbuc11.jpg); ">
+								<a href="6post-propria-ta-gradina.html" class="color-3">
 									<div class="case-studies-summary">
-										<span>Eticheta la masa</span>
-										<h2>Ce presupune o cina festiva</h2>
+										<span>Gradinarit</span>
+										<h2>Propria ta gradina in bucatarie</h2>
 									</div>
 								</a>
 							</li>
