--- a/3post-atentie-la-tinuta.html
+++ b/3post-atentie-la-tinuta.html
@@ -72,7 +72,7 @@
 		<div class="fh5co-hero">
 			<div class="fh5co-overlay"></div>
 
-			<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/christmas_look.jpg);">
+			<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/couple3.png">
 
 				<div class="desc animate-box">
 					<div class="container">
