--- a/Bucatarie.html
+++ b/Bucatarie.html
@@ -208,11 +208,11 @@
 									</div>
 								</a>
 							</li>
-							<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/cover_bg_1.jpg); ">
+							<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/frypan1.jpg); ">
 								<a href="#" class="color-6">
 									<div class="case-studies-summary">
-										<span>Vestimentatie</span>
-										<h2>Imbracamintea la evenimente</h2>
+										<span>Incidente</span>
+										<h2>S-a ars tigaia?</h2>
 									</div>
 								</a>
 							</li>
