--- a/Gradina.html
+++ b/Gradina.html
@@ -191,28 +191,28 @@
 								</a>
 							</li>
 
-							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image:  url(images/blog-1.jpg);">
+							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image:  url(images/strawberries.jpg);">
 								<a href="#" class="color-4">
 									<div class="case-studies-summary">
-										<span>Amenajari</span>
-										<h2>Bucatarie cu stil</h2>
+										<span>Fructe</span>
+										<h2>Sanatos si gustos</h2>
 									</div>
 								</a>
 							</li>
 
-							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/cover_bg_3.jpg); ">
+							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/cactus.jpg); ">
 								<a href="#" class="color-5">
 									<div class="case-studies-summary">
-										<span>Alimentatie</span>
-										<h2>Beneficiile mancarii sanatoase</h2>
+										<span>Ingrijire</span>
+										<h2>Cactusul tau</h2>
 									</div>
 								</a>
 							</li>
-							<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/cover_bg_1.jpg); ">
+							<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/flori.jpg); ">
 								<a href="#" class="color-6">
 									<div class="case-studies-summary">
-										<span>Vestimentatie</span>
-										<h2>Imbracamintea la evenimente</h2>
+										<span>Amenajare</span>
+										<h2>Casa cu flori</h2>
 									</div>
 								</a>
 							</li>
@@ -283,14 +283,14 @@
 	 				<div class="clearfix visible-sm-block"></div>
 	 				<div class="col-lg-4 col-md-4 col-sm-6">
 	 					<div class="fh5co-blog animate-box">
-	 						<a href="3post-atentie-la-tinuta.html"><img class="img-responsive" src="images/cover_bg_1.jpg" alt=""></a>
+	 						<a href="6post-propria-ta-gradina.html"><img class="img-responsive" src="images/grbuc11.jpg" alt=""></a>
 	 						<div class="blog-text">
 	 							<div class="prod-title">
-	 								<h3><a href=""#>Atentie la tinuta</a></h3>
+	 								<h3><a href=""#>Propria ta gradina in bucatarie</a></h3>
 	 								<span class="posted_by">Decembrie 30</span>
 	 								<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-	 								<p>Pentru fiecare eveniment din viata ta se potriveste o alta tinuta. Afla care este aceea!</p>
-	 								<p><a href="3post-atentie-la-tinuta.html">Vezi mai mult...</a></p>
+	 								<p>Vrei sa ai condimente proaspete pentru mancarurile tale in fiecare zi?</p>
+	 								<p><a href="6post-propria-ta-gradina.html">Vezi mai mult...</a></p>
 	 							</div>
 	 						</div>
 	 					</div>
