--- a/Pentru-tine.html
+++ b/Pentru-tine.html
@@ -182,37 +182,37 @@
 					<div class="col-md-12">
 						<ul id="fh5co-portfolio-list">
 
-							<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/cover_bg_2.jpg); ">
+							<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/books2018.jpeg); ">
 								<a href="#" class="color-3">
 									<div class="case-studies-summary">
-										<span>Eticheta la masa</span>
-										<h2>Ce presupune o cina festiva</h2>
+										<span>Carti</span>
+										<h2>Cartile anului 2018</h2>
 									</div>
 								</a>
 							</li>
 
-							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image:  url(images/blog-1.jpg);">
+							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image:  url(images/firstdate.jpg);">
 								<a href="#" class="color-4">
 									<div class="case-studies-summary">
-										<span>Amenajari</span>
-										<h2>Bucatarie cu stil</h2>
+										<span>Intalniri</span>
+										<h2>Prima intalnire?</h2>
 									</div>
 								</a>
 							</li>
 
-							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/cover_bg_3.jpg); ">
+							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/dogfriend.jpg); ">
 								<a href="#" class="color-5">
 									<div class="case-studies-summary">
-										<span>Alimentatie</span>
-										<h2>Beneficiile mancarii sanatoase</h2>
+										<span>Animale de companie</span>
+										<h2>Cel mai bun prieten</h2>
 									</div>
 								</a>
 							</li>
-							<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/cover_bg_1.jpg); ">
+							<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/studymusic.png); ">
 								<a href="#" class="color-6">
 									<div class="case-studies-summary">
-										<span>Vestimentatie</span>
-										<h2>Imbracamintea la evenimente</h2>
+										<span>Music</span>
+										<h2>Playlist pentru studiu</h2>
 									</div>
 								</a>
 							</li>
