--- a/Casa-ta.html
+++ b/Casa-ta.html
@@ -183,11 +183,11 @@
 					<div class="col-md-12">
 						<ul id="fh5co-portfolio-list">
 
-							<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/cover_bg_2.jpg); ">
+							<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/knitblanket.jpg); ">
 								<a href="#" class="color-3">
 									<div class="case-studies-summary">
-										<span>Eticheta la masa</span>
-										<h2>Ce presupune o cina festiva</h2>
+										<span>Acomodare</span>
+										<h2>Cum sa iti faci propria patura de lana</h2>
 									</div>
 								</a>
 							</li>
@@ -201,19 +201,19 @@
 								</a>
 							</li>
 
-							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/cover_bg_3.jpg); ">
+							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/photoframe.jpg); ">
 								<a href="#" class="color-5">
 									<div class="case-studies-summary">
-										<span>Alimentatie</span>
-										<h2>Beneficiile mancarii sanatoase</h2>
+										<span>Stil</span>
+										<h2>Arta de perete</h2>
 									</div>
 								</a>
 							</li>
-							<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/cover_bg_1.jpg); ">
+							<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/plante.jpg); ">
 								<a href="#" class="color-6">
 									<div class="case-studies-summary">
-										<span>Vestimentatie</span>
-										<h2>Imbracamintea la evenimente</h2>
+										<span>Amenajari</span>
+										<h2>Casa ta verde</h2>
 									</div>
 								</a>
 							</li>
@@ -312,58 +312,7 @@
 				<div class="container">
 					<div class="row row-bottom-padded-md">
 						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-				<!--			<h3>Services</h3>
-							<ul>
-								<li><a href="#">Web Development</a></li>
-								<li><a href="#">Design Strategy</a></li>
-								<li><a href="#">UI/UX Planning</a></li>
-								<li><a href="#">Photographer</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Company</h3>
-							<ul>
-								<li><a href="#">About Us</a></li>
-								<li><a href="#">Our Team</a></li>
-								<li><a href="#">Contact Us</a></li>
-								<li><a href="#">Support</a></li>
-								<li><a href="#">Career</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Our Apps</h3>
-							<ul>
-								<li><a href="#">Mobile Application</a></li>
-								<li><a href="#">Online Payment</a></li>
-								<li><a href="#">Time Monitoring</a></li>
-								<li><a href="#">Andriod Payment Gateway</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Downloads</h3>
-							<ul>
-								<li><a href="#">Apple Store</a></li>
-								<li><a href="#">Google Play</a></li>
-								<li><a href="#">Windows Store</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Services</h3>
-							<ul>
-								<li><a href="#">Web Development</a></li>
-								<li><a href="#">Design Strategy</a></li>
-								<li><a href="#">UI/UX Planning</a></li>
-								<li><a href="#">Photographer</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Connect</h3>
-							<ul>
-								<li><a href="#">Follow on Twitter</a></li>
-								<li><a href="#">Like on Facebook</a></li>
-								<li><a href="#">Circle with Google</a></li>
-								<li><a href="#">Partner with Linkedin</a></li>
-							</ul> -->
+
 						</div>
 					</div>
 					<div class="row">
