--- a/blogsport.html
+++ b/blogsport.html
@@ -133,23 +133,36 @@
 				<div class="row row-bottom-padded-md">
 					<div class="col-lg-4 col-md-4 col-sm-6">
 						<div class="fh5co-blog animate-box">
-							<a href="1post-tort-ciocolata.html"><img class="img-responsive" src="images/tort_cioco.jpg" alt=""></a>
+							<a href="5post-pilates.html"><img class="img-responsive" src="images/pilates.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>Tort de Ciocolata</a></h3>
-									<span class="posted_by">Ianuarie 12</span>
-									<span class="comment"><a href="">2<i class="icon-bubble2"></i></a></span>
-									<p>Perfect pentru petreceri si cine festive, este usor de facut si delicios!</p>
-									<p><a href="1post-tort-ciocolata.html">Vezi mai mult...</a></p>
+									<h3><a href=""#>Sportul la tine acasa</a></h3>
+									<span class="posted_by">Sep. 15th</span>
+									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
+									<p>Nu ai nevoie de un abonament la sala pentru a fi in forma. Niste muzica si o camera aerisita sunt de ajuns!</p>
+									<p><a href="5post-pilates.html">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
 
 						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="images/cover_bg_2.jpg" alt=""></a>
+							<a href="4-post-lupta-impotriva-depresiei.html"><img class="img-responsive" src="images/morningrun1.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>Web Design for the Future</a></h3>
+									<h3><a href=""#>Rutina de dimineata</a></h3>
+									<span class="posted_by">Sep. 15th</span>
+									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
+									<p>Activitatile fizice ofera foarte multe beneficii sanatatii si starii tale de spirit. Traieste mai mult, traieste mai bine!</p>
+									<p><a href="4-post-lupta-impotriva-depresiei.html">Vezi mai mult...</a></p>
+								</div>
+							</div>
+						</div>
+
+						<div class="fh5co-blog animate-box">
+							<a href="#"><img class="img-responsive" src="images/tehnicibaschet.jpg" alt=""></a>
+							<div class="blog-text">
+								<div class="prod-title">
+									<h3><a href=""#>Tehnici de baschet</a></h3>
 									<span class="posted_by">Sep. 15th</span>
 									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
@@ -157,14 +170,40 @@
 								</div>
 							</div>
 						</div>
+
 
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-6">
 						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="images/cover_bg_2.jpg" alt=""></a>
+							<a href="2post-beneficiile-alergarii.html"><img class="img-responsive" src="images/runnn1.png" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>Web Design for the Future</a></h3>
+									<h3><a href=""#>Beneficiile alergarii</a></h3>
+									<span class="posted_by">Ianuarie 12</span>
+									<span class="comment"><a href="">2<i class="icon-bubble2"></i></a></span>
+									<p>Perfect pentru petreceri si cine festive, este usor de facut si delicios!</p>
+									<p><a href="2post-beneficiile-alergarii.html">Vezi mai mult...</a></p>
+								</div>
+							</div>
+						</div>
+
+						<div class="fh5co-blog animate-box">
+							<a href="#"><img class="img-responsive" src="images/micdejuncampion.jpg" alt=""></a>
+							<div class="blog-text">
+								<div class="prod-title">
+									<h3><a href=""#>Mancarea campionilor</a></h3>
+									<span class="posted_by">Sep. 15th</span>
+									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
+									<p>Afla ce mancare te ajuta sa fii in forma!Pentru ca un plan alimentar sa fie unul de succes, stim cu totii ca avem nevoie de cele mai bune retete.</p>
+									<p><a href="#">Vezi mai mult...</a></p>
+								</div>
+							</div>
+						</div>
+						<div class="fh5co-blog animate-box">
+							<a href="#"><img class="img-responsive" src="images/footballfamily.jpg" alt=""></a>
+							<div class="blog-text">
+								<div class="prod-title">
+									<h3><a href=""#>Tehnici de baschet</a></h3>
 									<span class="posted_by">Sep. 15th</span>
 									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
@@ -173,27 +212,29 @@
 							</div>
 						</div>
 
-						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="images/cover_bg_1.jpg" alt=""></a>
-							<div class="blog-text">
-								<div class="prod-title">
-									<h3><a href=""#>Web Design for the Future</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-									<p><a href="#">Learn More...</a></p>
-								</div>
-							</div>
-						</div>
+
 
 					</div>
 					<div class="clearfix visible-sm-block"></div>
 					<div class="col-lg-4 col-md-4 col-sm-6">
 						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="images/cover_bg_3.jpg" alt=""></a>
+							<a href="4-post-lupta-impotriva-depresiei.html"><img class="img-responsive" src="images/depresie.jpeg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>Web Design for the Future</a></h3>
+									<h3><a href=""#>Lupta impotriva depresiei</a></h3>
+									<span class="posted_by">Sep. 15th</span>
+									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
+									<p>Activitatile fizice ofera foarte multe beneficii sanatatii si starii tale de spirit. Traieste mai mult, traieste mai bine!</p>
+									<p><a href="4-post-lupta-impotriva-depresiei.html">Vezi mai mult...</a></p>
+								</div>
+							</div>
+						</div>
+
+						<div class="fh5co-blog animate-box">
+							<a href="#"><img class="img-responsive" src="images/footballfamily.jpg" alt=""></a>
+							<div class="blog-text">
+								<div class="prod-title">
+									<h3><a href=""#>Tehnici de baschet</a></h3>
 									<span class="posted_by">Sep. 15th</span>
 									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
@@ -203,10 +244,10 @@
 						</div>
 
 						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="images/cover_bg_2.jpg" alt=""></a>
+							<a href="#"><img class="img-responsive" src="images/footballfamily.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>Web Design for the Future</a></h3>
+									<h3><a href=""#>Tehnici de baschet</a></h3>
 									<span class="posted_by">Sep. 15th</span>
 									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
@@ -214,6 +255,7 @@
 								</div>
 							</div>
 						</div>
+
 					</div>
 					<div class="clearfix visible-md-block"></div>
 				</div>
@@ -225,97 +267,7 @@
 
 
 		<div id="fh5co-blog-section" >
-			<div class="container">
-				<div class="row">
-			</div>
-			<div class="container">
-				<div class="row row-bottom-padded-md">
-					<div class="col-lg-4 col-md-4 col-sm-6">
-						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="images/cover_bg_1.jpg" alt=""></a>
-							<div class="blog-text">
-								<div class="prod-title">
-									<h3><a href=""#>Web Design for the Future</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-									<p><a href="#">Learn More...</a></p>
-								</div>
-							</div>
-						</div>
 
-						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="images/cover_bg_2.jpg" alt=""></a>
-							<div class="blog-text">
-								<div class="prod-title">
-									<h3><a href=""#>Web Design for the Future</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-									<p><a href="#">Learn More...</a></p>
-								</div>
-							</div>
-						</div>
-
-					</div>
-					<div class="col-lg-4 col-md-4 col-sm-6">
-						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="images/cover_bg_2.jpg" alt=""></a>
-							<div class="blog-text">
-								<div class="prod-title">
-									<h3><a href=""#>Web Design for the Future</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-									<p><a href="#">Learn More...</a></p>
-								</div>
-							</div>
-						</div>
-
-						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="images/cover_bg_1.jpg" alt=""></a>
-							<div class="blog-text">
-								<div class="prod-title">
-									<h3><a href=""#>Web Design for the Future</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-									<p><a href="#">Learn More...</a></p>
-								</div>
-							</div>
-						</div>
-
-					</div>
-					<div class="clearfix visible-sm-block"></div>
-					<div class="col-lg-4 col-md-4 col-sm-6">
-						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="images/cover_bg_3.jpg" alt=""></a>
-							<div class="blog-text">
-								<div class="prod-title">
-									<h3><a href=""#>Web Design for the Future</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-									<p><a href="#">Learn More...</a></p>
-								</div>
-							</div>
-						</div>
-
-						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="images/cover_bg_2.jpg" alt=""></a>
-							<div class="blog-text">
-								<div class="prod-title">
-									<h3><a href=""#>Web Design for the Future</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-									<p><a href="#">Learn More...</a></p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="clearfix visible-md-block"></div>
-				</div>
 
 				<div class="row">
 					<div class="col-md-4 col-md-offset-4 text-center animate-box">
@@ -325,7 +277,7 @@
 
 
 			</div>
-		</div>
+
 
 
 
