ceva facut la scoala

--- a/7post-mancarea-campionilor.html
+++ b/7post-mancarea-campionilor.html
@@ -7,7 +7,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Beneficiile Alergării</title>
+	<title>Mancarea campionilor</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
@@ -71,9 +71,7 @@
 
 		<div class="fh5co-hero">
 			<div class="fh5co-overlay"></div>
-
-			<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/running-image.jpg);">
-
+			<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/pilates2.jpg);">
 				<div class="desc animate-box">
 					<div class="container">
 						<div class="col-md-10 col-md-offset-1">
@@ -82,7 +80,7 @@
 								<h2> </h2>
 								<p></p>
 
-								<h2>Beneficiile Alergarii</h2>
+								<h2>Alimentatia, sursa vietii</h2>
 								<!--<p>HandCrafted by <a href="http://frehtml5.co/" target="_blank" class="fh5co-site-name">FreeHTML5.co</a></p> -->
 							</div>
 						</div>
@@ -129,91 +127,46 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2 text-center heading-section">
-			<!--	<h3>Beneficiile Alergarii</h3>  -->
-				<p>Alergarea e una dintre cele mai eficiente moduri de a arde calorii și a fi în formă. </p>
 
+				<p>Alimentatia sanatoasa a fost intotdeauna un factor esential pentru o viata fericita si de lunga durata. De ce sa nu beneficiezi si tu de ea?</p>
 			</div>
 		</div>
 
 		<div class="row row-bottom-padded-md">
 			<div class="col-md-12 text-center animate-box">
-				<p><img src="images/runn1.png" alt="Free HTML5 Bootstrap Template" class="img-responsive img-rounded"></p>
+				<p><img src="images/mancaresanatoasa.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive img-rounded"></p>
 			</div>
 
 		</div>
-
 		<div class="row">
-
+			<div class="col-md-12">
 				<div class="feature-text">
 
-					<p>Ce promite un corp mai sanatos, o speranta de viata mai mare si oportunitatea perfecta de a face progrese? Articolul acesta nu e nicio reclama.
-						Alergarea este unul dintre cele mai eficiente si nimicitoare antrenamente in ceea ce priveste lupta cu caloriile si depresiile. Nu esti convins?
-						 Iată principalele beneficii ale alergatului zilnic:</p>
+					 <h2><b>Legatura dintre sport si alimentatie</b></h2>
+           <p>Chiar dacă sunteți profesionist, amator sau doar sportiv de weekend, alimentele pe care le consumați constituie un factor major care influențează performanța dumneavoastra.
+             Pentru sportivii de orice nivel, mâncarea este combustibilul pentru organism, iar consumul tipurilor și cantităților potrivite la momentul oportun este cheia. Mâncați
+           sănătos, alegeți alimente integrale și plănuiți-vă bine mesele și gustările pentru ca acestea să vă alimenteze randamentul.</p>
 
+           <h2><b>Plan alimentar saptamanal</b></h2>
 				</div>
-			</div>
-
-
-
-			<div class="row row-bottom-padded-md">
-				<h3></h3>
-				<h3></h3>
-				<div class="col-md-4">
-					<div class="feature-text">
-						<h3>Scazi tensiunea arteriala</h3>
-						<p>Alergarea reprezinta o metoda naturala de a tine la distanta tensiunea arteriala crescuta – si rapida.
-							 Sesiunile de antrenament amplificate pot scadea tensiunea arteriala in doar cateva saptamani.  </p>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="feature-text">
-						<h3>Dai mai rar pe la medici</h3>
-						<p><!--Nu doar merele te tin departe de cabinetul medical.--> Oamenii activi sunt mai putin predispusi la cancer de colon si alte boli.
-							 Iar doamnele care practica antrenamente intensive precum alergarea in mod regulat pot reduce riscul cancerului la san. </p>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="feature-text">
-						<h3>Incapi in blugi skinny</h3>
-						<p>Alergarea este printre cele mai bune metode de a arde calorii.
-							 Alergarea poate arde mai mult de 850 de calorii pe ora la o persoana de 70 de kilograme. Nu c-am tine vreo socoteala.</p>
-					</div>
-				</div>
-			</div>
-
-			<div class="row row-bottom-padded-md">
-				<div class="col-md-4">
-					<div class="feature-text">
-						<h3>Iti creste stima de sine</h3>
-						<p>Ai nevoie de un motiv in plus sa iesi in aer liber? S-a demonstrat ca alergatorii care alearga pe afara si
-							cuprind bine cu privirea peisaje naturale au o stima de sine mai crescuta dupa antrenament fata de cei care alearga cu privirea la scene dezolante. </p>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="feature-text">
-						<h3>Iti sculptezi abdomenul</h3>
-						<p>Un trunchi puternic imbunatateste postura si face ca activitatile zilnice sa fie indeplinite cu usurinta.
-							 Indiferent ca simtim asta sau nu, alergarea angreneaza aceasta parte de mijloc a organismului.
-							  Bonus: un abdomen puternic poate, de asemenea, imbunatati performanta. </p>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="feature-text">
-						<h3>Vei dormi mai bine</h3>
-						<p>Alergatorii tind sa-si adapteze programul de somn astfel incat sa-si mentina nivelul de performanta in alergare ridicat.
-							In plus, alergarea favorizeaza o calitate mai buna a somnului, ceea ce inseamna ca vei dormi mai bine cat e noaptea de lunga.</p>
-					</div>
-				</div>
-			</div>
+		</div>
 
 
-		<!--	<div class="col-md-4">
-				<div class="feature-text">
-					<h3>Django Python</h3>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-				</div>
-			</div>
-		</div> -->
+    <div class="row">
+      <div class="col-md-4">
+        <div class="feature-text">
+          <h2><i>Luni</i></h2>
+          <p>-milkshake de banane si capsuni:</p>
+          <ul>
+            <li>300ml lapte de migdale</li>
+            <li>o banana foarte coapta</li>
+            <li>70g capsuni</li>
+            <li>scortisoara din abundenta</li>
+            <li>o lingura unt de arahide</li>
+
+            <p>Pune toate ingredientele intr-un blender si e gata! Numai bun de luat la pachet!</li>
+
+          </ul>
 
 
 	</div>
@@ -235,6 +188,9 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
+								<h3></h3>
+								<h3></h3>
+								<h1></h1>
 								<h3>Recente</h3>
 								<p>Vezi cele mai recente postari de pe website-ul nostru!</p>
 							</div>
