--- a/Gradina.html
+++ b/Gradina.html
@@ -126,14 +126,14 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
-						<h3>ceva potrivit</h3>
+						<h3>Hai pe-afara!</h3>
 						<p>- de ce e noroi peste tot ?!</p>
 					</div>
 				</div>
 
 				<div class="row row-bottom-padded-md">
 					<div class="col-md-12 text-center animate-box">
-						<p><img src="images/gardengif.gif" alt="Free HTML5 Bootstrap Template" class="img-responsive img-rounded"></p>
+						<p><img src="images/gardengif3.gif" alt="Free HTML5 Bootstrap Template" class="img-responsive img-rounded"></p>
 					</div>
 
 				</div>
