--- a/Sport.html
+++ b/Sport.html
@@ -204,7 +204,7 @@
 							</li>
 
 							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/micdejuncampion.jpg); ">
-								<a href="#" class="color-5">
+								<a href="7post-mancarea-campionilor.html" class="color-5">
 									<div class="case-studies-summary">
 										<span>Alimentatie</span>
 										<h2>Mancarea campionilor</h2>
