update gustarea campioni

--- a/7post-mancarea-campionilor.html
+++ b/7post-mancarea-campionilor.html
@@ -147,7 +147,7 @@
              Pentru sportivii de orice nivel, mâncarea este combustibilul pentru organism, iar consumul tipurilor și cantităților potrivite la momentul oportun este cheia. Mâncați
            sănătos, alegeți alimente integrale și plănuiți-vă bine mesele și gustările pentru ca acestea să vă alimenteze randamentul.</p>
 
-           <h2><b>Plan alimentar saptamanal</b></h2>
+           <h2><b>Fii campion pentru o zi!</b></h2>
 				</div>
 		</div>
 
@@ -155,33 +155,96 @@
     <div class="row">
       <div class="col-md-4">
         <div class="feature-text">
-          <h2><i>Luni</i></h2>
+          <h2><i>Mic Dejun</i></h2>
           <p>-milkshake de banane si capsuni:</p>
           <ul>
             <li>300ml lapte de migdale</li>
             <li>o banana foarte coapta</li>
             <li>70g capsuni</li>
             <li>scortisoara din abundenta</li>
-            <li>o lingura unt de arahide</li>
+            <li>*o lingura unt de arahide</li>
+					</ul>
 
-            <p>Pune toate ingredientele intr-un blender si e gata! Numai bun de luat la pachet!</li>
+            <p>Pune toate ingredientele intr-un blender si e gata! Numai bun de luat la pachet!</p>
+</div>
+</div>
+			 <div class="col-md-4">
+					 <div class="feature-text">
+					<h2><i>Gustare1</i></h2>
+          <p>-mix de nuci si fructe uscate</p>
+          <ul>
+            <li>20g nuci</li>
+            <li>3 smochine uscate</li>
+						<li>doua linguri fulgi de cocos</li>
+            <li>30g migdale</li>
+						<li>3 caise uscate</li>
+            <li>doua lingurite merisoare uscate</li>
+					</ul>
+				</div>
+			</div>
 
-          </ul>
-
-
+			<div class="col-md-4">
+				<div class="feature-text">
+					<h2><i>Sport</i></h2>
+					<p>Practica un sport timp de cel putin 45 de minute! Recomandarile noastre:</p>
+					<ul>
+						<li>inot -tonifiaza muschii</li>
+						<li>jogging -revigoreaza corpul</li>
+						<li>tenis de camp -lucreaza mobilitatea</li>
+						<li>ciclism -antreneaza rezistenta</li>
+						<li>volei -echilibru corp-minte</li>
+						<li>baschet -foarte recreativ!</li>
 	</div>
 </div>
-
-
-
-<h3></h3>
- <!--poza vine pe mijloc
-<div class="middlephoto">
-	<img src="images/tort_cioco.jpg" height="500" width="900">
 </div>
--->
-<h3></h3>
-<h3></h3>
+
+
+
+<div class="row">
+	<div class="col-md-4">
+		<div class="feature-text">
+			<h2><i>Pranz</i></h2>
+			<p>-salata cu somon afumat:</p>
+			<ul>
+				<li>200g somon afumat</li>
+				<li>o salata verde</li>
+				<li>5 rosii cherry</li>
+				<li>150g naut fiert</li>
+				<li>putin ulei de masline</li>
+			</ul>
+
+				<p>Taie toate legumele, amesteca si asezoneaza cu ulei. Adauga somonul taiat fasii si nautul si mananca!</p>
+</div>
+</div>
+	 <div class="col-md-4">
+			 <div class="feature-text">
+			<h2><i>Gustare2</i></h2>
+			<p>-iaurt grecesc cu afine</p>
+			<ul>
+				<li>270ml iaurt grecesc natural</li>
+				<li>un pumn de afine</li>
+				<li>*o lingurita de miere</li>
+			</ul>
+		</div>
+	</div>
+
+	<div class="col-md-4">
+		<div class="feature-text">
+			<h2><i>Sport</i></h2>
+			<p>Practica un sport timp de cel putin 45 de minute! Recomandarile noastre:</p>
+			<ul>
+				<li>inot -tonifiaza muschii</li>
+				<li>jogging -revigoreaza corpul</li>
+				<li>tenis de camp -lucreaza mobilitatea</li>
+				<li>ciclism -antreneaza rezistenta</li>
+				<li>volei -echilibru corp-minte</li>
+				<li>baschet -foarte recreativ!</li>
+</div>
+</div>
+</div>
+
+
+
 
 
 				<div id="fh5co-blog-section">
