--- a/6post-propria-ta-gradina.html
+++ b/6post-propria-ta-gradina.html
@@ -71,7 +71,7 @@
 
 		<div class="fh5co-hero">
 			<div class="fh5co-overlay"></div>
-			<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/grbuc10.jpg);">
+			<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/grbuc4.jpg);">
 				<div class="desc animate-box">
 					<div class="container">
 						<div class="col-md-10 col-md-offset-1">
@@ -138,7 +138,7 @@
 
 		<div class="row row-bottom-padded-md">
 			<div class="col-md-12 text-center animate-box">
-				<p><img src="images/grbuc2.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive img-rounded"></p>
+				<p><img src="images/grbuc3.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive img-rounded"></p>
 			</div>
 
 		</div>
@@ -275,14 +275,14 @@
 							<div class="clearfix visible-sm-block"></div>
 							<div class="col-lg-4 col-md-4 col-sm-6">
 								<div class="fh5co-blog animate-box">
-									<a href="3post-atentie-la-tinuta.html"><img class="img-responsive" src="images/cover_bg_1.jpg" alt=""></a>
+									<a href="6post-propria-ta-gradina.html"><img class="img-responsive" src="images/grbuc2.jpg" alt=""></a>
 									<div class="blog-text">
 										<div class="prod-title">
-											<h3><a href=""#>Atentie la tinuta</a></h3>
+											<h3><a href=""#>Propria ta gradina in bucatarie</a></h3>
 											<span class="posted_by">Decembrie 30</span>
 											<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-											<p>Pentru fiecare eveniment din viata ta se potriveste o alta tinuta. Afla care este aceea!</p>
-											<p><a href="3post-atentie-la-tinuta.html">Vezi mai mult...</a></p>
+											<p>Vrei sa ai condimente proaspete pentru mancarurile tale in fiecare zi?</p>
+											<p><a href="6post-propria-ta-gradina.html">Vezi mai mult...</a></p>
 										</div>
 									</div>
 								</div>
