--- a/Pentru-tine.html
+++ b/Pentru-tine.html
@@ -283,14 +283,14 @@
 	 				<div class="clearfix visible-sm-block"></div>
 	 				<div class="col-lg-4 col-md-4 col-sm-6">
 	 					<div class="fh5co-blog animate-box">
-	 						<a href="3post-atentie-la-tinuta.html"><img class="img-responsive" src="images/cover_bg_1.jpg" alt=""></a>
-	 						<div class="blog-text">
-	 							<div class="prod-title">
-	 								<h3><a href=""#>Atentie la tinuta</a></h3>
-	 								<span class="posted_by">Decembrie 30</span>
-	 								<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-	 								<p>Pentru fiecare eveniment din viata ta se potriveste o alta tinuta. Afla care este aceea!</p>
-	 								<p><a href="3post-atentie-la-tinuta.html">Vezi mai mult...</a></p>
+							<a href="6post-propria-ta-gradina.html"><img class="img-responsive" src="images/grbuc2.jpg" alt=""></a>
+							<div class="blog-text">
+								<div class="prod-title">
+									<h3><a href=""#>Propria ta gradina in bucatarie</a></h3>
+									<span class="posted_by">Decembrie 30</span>
+									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
+									<p>Vrei sa ai condimente proaspete pentru mancarurile tale in fiecare zi?</p>
+									<p><a href="6post-propria-ta-gradina.html">Vezi mai mult...</a></p>
 	 							</div>
 	 						</div>
 	 					</div>
